--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Clockwork Admin</title>
+  <base href="<%= base_url %>">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
